[package]
name = "crater"
version = "0.1.0"
edition = "2021"

[lib]
name = "crater"
path = "src/lib.rs"

[[bin]]
name = "crater"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "fs", "process", "parking_lot", "signal"] }
tokio-util = "0.7"

chrono = { version = "0.4", features = ["serde", "clock"] }

thiserror = "1"

derive_get = { git = "https://github.com/paulocsanz/derive_get.git" }

reqwest = { version = "0.11", features = ["json"] }

dotenv = "0.15.0"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

remain = "0.2"
strum = { version = "0.26", features = ["derive"] }

sha2 = "0.10"
hmac = "0.12"

color-eyre = "0.6"

rand = "0.7"
